<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homepage.RegistrationScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:id="@+id/innerView"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_4sdp"
                android:layout_margin="@dimen/_15sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/orange" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/light_grey" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_2"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basic_details"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_15sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/feel_free_to_fill_your_data"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:textStyle="bold"
                    android:text="@string/name" />
                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:padding="@dimen/_5sdp"
                    android:background="@drawable/round_bg" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:textStyle="bold"
                    android:text="@string/phone" />
                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:padding="@dimen/_5sdp"
                    android:inputType="phone"
                    android:background="@drawable/round_bg" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:textStyle="bold"
                    android:text="@string/gender" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tvMale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:background="@drawable/orange_bg"
                        android:textColor="@color/white"
                        android:padding="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_3sdp"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_weight="1"
                        android:text="@string/male" />
                    <TextView
                        android:id="@+id/tvFemale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:background="@drawable/round_color"
                        android:textColor="@color/orange"
                        android:padding="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_3sdp"
                        android:layout_marginRight="@dimen/_3sdp"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_weight="1"
                        android:text="@string/female" />
                    <TextView
                        android:id="@+id/tvOthers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:background="@drawable/round_color"
                        android:textColor="@color/orange"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:padding="@dimen/_5sdp"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_weight="1"
                        android:text="@string/others" />
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:textStyle="bold"
                    android:text="@string/email_id" />
                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_id"
                    android:padding="@dimen/_5sdp"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/round_bg" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:textStyle="bold"
                    android:text="@string/address" />
                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:padding="@dimen/_5sdp"
                    android:inputType="textMultiLine"
                    android:maxLines="3"
                    android:layout_marginBottom="@dimen/_35sdp"
                    android:background="@drawable/round_bg" />


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btnContinue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="@dimen/_7sdp"
                    app:cardCornerRadius="@dimen/_8sdp"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/_25sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/blue"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_gravity="center_vertical"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:text="Continue" />
                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:padding="@dimen/_12sdp"
                            android:src="@drawable/right_arrow" />
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>